add: more features html|css

--- a/public/index.html
+++ b/public/index.html
@@ -36,13 +36,13 @@
           </li>
         </ul>
       </div>
-      <div class="apresentation">
+      <section class="apresentation">
         <h1>Ola, sou <span>robert</span></h1>
         <img
           src="https://cdn-icons-png.flaticon.com/512/6923/6923735.png"
           alt="imgpng"
         />
-      </div>
+      </section>
     </header>
     <main class="corpse"></main>
     <footer class="nails"></footer>
