Add: html&css header definitions

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,10 @@
         </ul>
       </div>
       <section class="apresentation">
-        <h1>Ola, sou <span>robert</span></h1>
+        <h1>
+          Ola, sou <span>Robert</span>, atualmente sou cabo do exército, estudo
+          programação desde junho/23, previsão de conclusão é dezembro/25.
+        </h1>
         <img
           src="https://cdn-icons-png.flaticon.com/512/6923/6923735.png"
           alt="imgpng"
